--- a/src/main/resources/es/uvigo/ei/sing/adops/views/alignment.template.html
+++ b/src/main/resources/es/uvigo/ei/sing/adops/views/alignment.template.html
@@ -23,7 +23,7 @@
 
 <html>
 <head>
-<meta charset="UTF-8">
+<meta charset="UTF-8"/>
 <title>ADOPS - Positive Selected Sites</title>
 [HEADER]
 </head>
